[package]
name = "receiver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = {path = "../library"}
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
# zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }